Add --verbose and --debug flags to phpunit cli execution.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ php:
   - '7.0'
   - hhvm
   - nightly
-script: phpunit --stderr testing/tests
+script: phpunit --verbose --debug --stderr testing/tests
